--- a/scss/box-grid.scss
+++ b/scss/box-grid.scss
@@ -5,7 +5,7 @@
   .row {
     
     .col {
-      margin: 2% 0 0 2%;
+      margin: 10px 0 0;
       position: relative;
       .box {
         display: block;
@@ -74,6 +74,15 @@
   }
 }
 
+@media #{$mqPhoneLandscape}{
+  .box-grid {
+    .row {
+      .col {
+        margin: 2% 0 0 2%;
+      }
+    }
+  }
+}
 
 @media #{$mqTabletWidth}{
 
@@ -82,6 +91,7 @@
     .row {
 
       .col {
+        margin: 2% 0 0 2%;
         padding: 0;
       }
 
