--- a/scss/shared.scss
+++ b/scss/shared.scss
@@ -123,7 +123,7 @@
 
 }
 
-@media #{$mqSubTabletWidth}{
+@media #{$mqPhoneLandscape}{
   .box-grid .row.small-col-2, .row.small-col-2 {
     .col {
       float: left;
